ly2xml/LilypondParser.py
# Generated from ly2xml/LilypondParser.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LilypondParser ( Parser ):

    grammarFileName = "LilypondParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\new StaffGroup'", "<INVALID>", "<INVALID>", 
                     "'\\header'", "'\\layout'", "'\\score'", "'\\with'", 
                     "'\\version'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\bar'", "'\\clef'", 
                     "'\\default'", "'\\fermata'", "'\\key'", "'\\mark'", 
                     "<INVALID>", "'\\major'", "'\\minor'", "'\\relative'", 
                     "'\\tempo'", "'\\time'", "'\\voiceOne'", "'\\voiceTwo'", 
                     "'\\voiceThree'", "'\\voiceFour'" ]

    symbolicNames = [ "<INVALID>", "STAFFGROUP_CTX", "STAFF_CTX", "VOICE_CTX", 
                      "HEADER_KW", "LAYOUT_KW", "SCORE_KW", "WITH_KW", "VERSION_KW", 
                      "SCHEME_GP", "SCHEME_ATOM", "ID", "STRING", "VERSION_STR", 
                      "HASH", "LBRACE", "RBRACE", "LANGLE", "RANGLE", "EQUALS", 
                      "DOT", "BSLASH", "FSLASH", "INTEGER", "COMMENT_MULTILINE", 
                      "COMMENT_INLINE", "WS", "END_NOTEBLOCK", "VOICE_CTX_N", 
                      "REL_BLOCK_N", "START_POLYPHONY_N", "NOTE", "OCTAVE", 
                      "TIME_SIG", "BARLINE", "BAR_KW", "CLEF_KW", "DEFAULT_KW", 
                      "FERMATA_KW", "KEY_KW", "MARK_KW", "MODE_KW", "MODE_MAJ", 
                      "MODE_MIN", "RELATIVE_KW", "TEMPO_KW", "TIME_KW", 
                      "VOICE_ONE", "VOICE_TWO", "VOICE_THREE", "VOICE_FOUR", 
                      "COMMENT_MULTILINE_N", "COMMENT_INLINE_N", "WS_N", 
                      "NEXT_NOTEBLOCK_P", "NEW_NOTEBLOCK_P", "VOICE_CTX_P", 
                      "END_POLYPHONY_P", "COMMENT_MULTILINE_P", "COMMENT_INLINE_P", 
                      "WS_P" ]

    RULE_score_file = 0
    RULE_header_block = 1
    RULE_score_block = 2
    RULE_staffgroup_block = 3
    RULE_staff_block = 4
    RULE_prefix_block = 5
    RULE_voice_block = 6
    RULE_note_block = 7
    RULE_relative_block = 8
    RULE_polyphony_block = 9
    RULE_chord = 10
    RULE_note = 11
    RULE_note_cmd = 12
    RULE_bar_cmd = 13
    RULE_clef_cmd = 14
    RULE_fermata_cmd = 15
    RULE_key_cmd = 16
    RULE_mark_cmd = 17
    RULE_scheme_cmd = 18
    RULE_tempo_cmd = 19
    RULE_time_cmd = 20
    RULE_version_cmd = 21
    RULE_voice_cmd = 22
    RULE_assignment = 23

    ruleNames =  [ "score_file", "header_block", "score_block", "staffgroup_block", 
                   "staff_block", "prefix_block", "voice_block", "note_block", 
                   "relative_block", "polyphony_block", "chord", "note", 
                   "note_cmd", "bar_cmd", "clef_cmd", "fermata_cmd", "key_cmd", 
                   "mark_cmd", "scheme_cmd", "tempo_cmd", "time_cmd", "version_cmd", 
                   "voice_cmd", "assignment" ]

    EOF = Token.EOF
    STAFFGROUP_CTX=1
    STAFF_CTX=2
    VOICE_CTX=3
    HEADER_KW=4
    LAYOUT_KW=5
    SCORE_KW=6
    WITH_KW=7
    VERSION_KW=8
    SCHEME_GP=9
    SCHEME_ATOM=10
    ID=11
    STRING=12
    VERSION_STR=13
    HASH=14
    LBRACE=15
    RBRACE=16
    LANGLE=17
    RANGLE=18
    EQUALS=19
    DOT=20
    BSLASH=21
    FSLASH=22
    INTEGER=23
    COMMENT_MULTILINE=24
    COMMENT_INLINE=25
    WS=26
    END_NOTEBLOCK=27
    VOICE_CTX_N=28
    REL_BLOCK_N=29
    START_POLYPHONY_N=30
    NOTE=31
    OCTAVE=32
    TIME_SIG=33
    BARLINE=34
    BAR_KW=35
    CLEF_KW=36
    DEFAULT_KW=37
    FERMATA_KW=38
    KEY_KW=39
    MARK_KW=40
    MODE_KW=41
    MODE_MAJ=42
    MODE_MIN=43
    RELATIVE_KW=44
    TEMPO_KW=45
    TIME_KW=46
    VOICE_ONE=47
    VOICE_TWO=48
    VOICE_THREE=49
    VOICE_FOUR=50
    COMMENT_MULTILINE_N=51
    COMMENT_INLINE_N=52
    WS_N=53
    NEXT_NOTEBLOCK_P=54
    NEW_NOTEBLOCK_P=55
    VOICE_CTX_P=56
    END_POLYPHONY_P=57
    COMMENT_MULTILINE_P=58
    COMMENT_INLINE_P=59
    WS_P=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Score_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Header_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Header_blockContext,i)


        def score_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Score_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Score_blockContext,i)


        def version_cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Version_cmdContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Version_cmdContext,i)


        def scheme_cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Scheme_cmdContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Scheme_cmdContext,i)


        def getRuleIndex(self):
            return LilypondParser.RULE_score_file




    def score_file(self):

        localctx = LilypondParser.Score_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_score_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LilypondParser.HEADER_KW]:
                    self.state = 48
                    self.header_block()
                    pass
                elif token in [LilypondParser.SCORE_KW]:
                    self.state = 49
                    self.score_block()
                    pass
                elif token in [LilypondParser.VERSION_KW]:
                    self.state = 50
                    self.version_cmd()
                    pass
                elif token in [LilypondParser.SCHEME_GP, LilypondParser.SCHEME_ATOM]:
                    self.state = 51
                    self.scheme_cmd()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 54 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LilypondParser.HEADER_KW) | (1 << LilypondParser.SCORE_KW) | (1 << LilypondParser.VERSION_KW) | (1 << LilypondParser.SCHEME_GP) | (1 << LilypondParser.SCHEME_ATOM))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Header_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEADER_KW(self):
            return self.getToken(LilypondParser.HEADER_KW, 0)

        def LBRACE(self):
            return self.getToken(LilypondParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LilypondParser.RBRACE, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(LilypondParser.AssignmentContext,i)


        def getRuleIndex(self):
            return LilypondParser.RULE_header_block




    def header_block(self):

        localctx = LilypondParser.Header_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(LilypondParser.HEADER_KW)
            self.state = 57
            self.match(LilypondParser.LBRACE)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LilypondParser.ID:
                self.state = 58
                self.assignment()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(LilypondParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Score_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCORE_KW(self):
            return self.getToken(LilypondParser.SCORE_KW, 0)

        def LBRACE(self):
            return self.getToken(LilypondParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LilypondParser.RBRACE, 0)

        def staff_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Staff_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Staff_blockContext,i)


        def staffgroup_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Staffgroup_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Staffgroup_blockContext,i)


        def getRuleIndex(self):
            return LilypondParser.RULE_score_block




    def score_block(self):

        localctx = LilypondParser.Score_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_score_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(LilypondParser.SCORE_KW)
            self.state = 67
            self.match(LilypondParser.LBRACE)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LilypondParser.STAFFGROUP_CTX or _la==LilypondParser.STAFF_CTX:
                self.state = 70
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LilypondParser.STAFF_CTX]:
                    self.state = 68
                    self.staff_block()
                    pass
                elif token in [LilypondParser.STAFFGROUP_CTX]:
                    self.state = 69
                    self.staffgroup_block()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(LilypondParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Staffgroup_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAFFGROUP_CTX(self):
            return self.getToken(LilypondParser.STAFFGROUP_CTX, 0)

        def LANGLE(self, i:int=None):
            if i is None:
                return self.getTokens(LilypondParser.LANGLE)
            else:
                return self.getToken(LilypondParser.LANGLE, i)

        def RANGLE(self, i:int=None):
            if i is None:
                return self.getTokens(LilypondParser.RANGLE)
            else:
                return self.getToken(LilypondParser.RANGLE, i)

        def staff_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Staff_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Staff_blockContext,i)


        def getRuleIndex(self):
            return LilypondParser.RULE_staffgroup_block




    def staffgroup_block(self):

        localctx = LilypondParser.Staffgroup_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_staffgroup_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(LilypondParser.STAFFGROUP_CTX)
            self.state = 78
            self.match(LilypondParser.LANGLE)
            self.state = 79
            self.match(LilypondParser.LANGLE)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LilypondParser.STAFF_CTX:
                self.state = 80
                self.staff_block()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(LilypondParser.RANGLE)
            self.state = 87
            self.match(LilypondParser.RANGLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Staff_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAFF_CTX(self):
            return self.getToken(LilypondParser.STAFF_CTX, 0)

        def END_NOTEBLOCK(self):
            return self.getToken(LilypondParser.END_NOTEBLOCK, 0)

        def prefix_block(self):
            return self.getTypedRuleContext(LilypondParser.Prefix_blockContext,0)


        def note_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Note_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Note_blockContext,i)


        def polyphony_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Polyphony_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Polyphony_blockContext,i)


        def voice_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Voice_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Voice_blockContext,i)


        def getRuleIndex(self):
            return LilypondParser.RULE_staff_block




    def staff_block(self):

        localctx = LilypondParser.Staff_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_staff_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(LilypondParser.STAFF_CTX)
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 90
                self.prefix_block()


            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 93
                    self.note_block()
                    pass

                elif la_ == 2:
                    self.state = 94
                    self.polyphony_block()
                    pass

                elif la_ == 3:
                    self.state = 95
                    self.voice_block()
                    pass


                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LilypondParser.VOICE_CTX) | (1 << LilypondParser.LANGLE) | (1 << LilypondParser.VOICE_CTX_N) | (1 << LilypondParser.REL_BLOCK_N) | (1 << LilypondParser.START_POLYPHONY_N) | (1 << LilypondParser.NOTE) | (1 << LilypondParser.BAR_KW) | (1 << LilypondParser.CLEF_KW) | (1 << LilypondParser.FERMATA_KW) | (1 << LilypondParser.KEY_KW) | (1 << LilypondParser.MARK_KW) | (1 << LilypondParser.TEMPO_KW) | (1 << LilypondParser.TIME_KW) | (1 << LilypondParser.VOICE_ONE) | (1 << LilypondParser.VOICE_TWO) | (1 << LilypondParser.VOICE_THREE) | (1 << LilypondParser.VOICE_FOUR) | (1 << LilypondParser.VOICE_CTX_P))) != 0)):
                    break

            self.state = 100
            self.match(LilypondParser.END_NOTEBLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prefix_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key_cmd(self):
            return self.getTypedRuleContext(LilypondParser.Key_cmdContext,0)


        def time_cmd(self):
            return self.getTypedRuleContext(LilypondParser.Time_cmdContext,0)


        def getRuleIndex(self):
            return LilypondParser.RULE_prefix_block




    def prefix_block(self):

        localctx = LilypondParser.Prefix_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_prefix_block)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LilypondParser.TIME_KW:
                    self.state = 102
                    self.time_cmd()


                self.state = 105
                self.key_cmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.time_cmd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Voice_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def END_NOTEBLOCK(self):
            return self.getToken(LilypondParser.END_NOTEBLOCK, 0)

        def VOICE_CTX(self):
            return self.getToken(LilypondParser.VOICE_CTX, 0)

        def VOICE_CTX_N(self):
            return self.getToken(LilypondParser.VOICE_CTX_N, 0)

        def VOICE_CTX_P(self):
            return self.getToken(LilypondParser.VOICE_CTX_P, 0)

        def note_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Note_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Note_blockContext,i)


        def polyphony_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Polyphony_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Polyphony_blockContext,i)


        def getRuleIndex(self):
            return LilypondParser.RULE_voice_block




    def voice_block(self):

        localctx = LilypondParser.Voice_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_voice_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LilypondParser.VOICE_CTX) | (1 << LilypondParser.VOICE_CTX_N) | (1 << LilypondParser.VOICE_CTX_P))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LilypondParser.VOICE_CTX) | (1 << LilypondParser.LANGLE) | (1 << LilypondParser.VOICE_CTX_N) | (1 << LilypondParser.REL_BLOCK_N) | (1 << LilypondParser.START_POLYPHONY_N) | (1 << LilypondParser.NOTE) | (1 << LilypondParser.BAR_KW) | (1 << LilypondParser.CLEF_KW) | (1 << LilypondParser.FERMATA_KW) | (1 << LilypondParser.KEY_KW) | (1 << LilypondParser.MARK_KW) | (1 << LilypondParser.TEMPO_KW) | (1 << LilypondParser.TIME_KW) | (1 << LilypondParser.VOICE_ONE) | (1 << LilypondParser.VOICE_TWO) | (1 << LilypondParser.VOICE_THREE) | (1 << LilypondParser.VOICE_FOUR) | (1 << LilypondParser.VOICE_CTX_P))) != 0):
                self.state = 112
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 110
                    self.note_block()
                    pass

                elif la_ == 2:
                    self.state = 111
                    self.polyphony_block()
                    pass


                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(LilypondParser.END_NOTEBLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Note_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relative_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Relative_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Relative_blockContext,i)


        def note_cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Note_cmdContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Note_cmdContext,i)


        def polyphony_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Polyphony_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Polyphony_blockContext,i)


        def chord(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.ChordContext)
            else:
                return self.getTypedRuleContext(LilypondParser.ChordContext,i)


        def note(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.NoteContext)
            else:
                return self.getTypedRuleContext(LilypondParser.NoteContext,i)


        def voice_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Voice_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Voice_blockContext,i)


        def getRuleIndex(self):
            return LilypondParser.RULE_note_block




    def note_block(self):

        localctx = LilypondParser.Note_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_note_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 125
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [LilypondParser.REL_BLOCK_N]:
                        self.state = 119
                        self.relative_block()
                        pass
                    elif token in [LilypondParser.BAR_KW, LilypondParser.CLEF_KW, LilypondParser.FERMATA_KW, LilypondParser.KEY_KW, LilypondParser.MARK_KW, LilypondParser.TEMPO_KW, LilypondParser.TIME_KW, LilypondParser.VOICE_ONE, LilypondParser.VOICE_TWO, LilypondParser.VOICE_THREE, LilypondParser.VOICE_FOUR]:
                        self.state = 120
                        self.note_cmd()
                        pass
                    elif token in [LilypondParser.START_POLYPHONY_N]:
                        self.state = 121
                        self.polyphony_block()
                        pass
                    elif token in [LilypondParser.LANGLE]:
                        self.state = 122
                        self.chord()
                        pass
                    elif token in [LilypondParser.NOTE]:
                        self.state = 123
                        self.note()
                        pass
                    elif token in [LilypondParser.VOICE_CTX, LilypondParser.VOICE_CTX_N, LilypondParser.VOICE_CTX_P]:
                        self.state = 124
                        self.voice_block()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 127 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Relative_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REL_BLOCK_N(self):
            return self.getToken(LilypondParser.REL_BLOCK_N, 0)

        def note_block(self):
            return self.getTypedRuleContext(LilypondParser.Note_blockContext,0)


        def END_NOTEBLOCK(self):
            return self.getToken(LilypondParser.END_NOTEBLOCK, 0)

        def getRuleIndex(self):
            return LilypondParser.RULE_relative_block




    def relative_block(self):

        localctx = LilypondParser.Relative_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_relative_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(LilypondParser.REL_BLOCK_N)
            self.state = 130
            self.note_block()
            self.state = 131
            self.match(LilypondParser.END_NOTEBLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Polyphony_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START_POLYPHONY_N(self):
            return self.getToken(LilypondParser.START_POLYPHONY_N, 0)

        def END_POLYPHONY_P(self):
            return self.getToken(LilypondParser.END_POLYPHONY_P, 0)

        def voice_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Voice_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Voice_blockContext,i)


        def NEW_NOTEBLOCK_P(self, i:int=None):
            if i is None:
                return self.getTokens(LilypondParser.NEW_NOTEBLOCK_P)
            else:
                return self.getToken(LilypondParser.NEW_NOTEBLOCK_P, i)

        def note_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LilypondParser.Note_blockContext)
            else:
                return self.getTypedRuleContext(LilypondParser.Note_blockContext,i)


        def END_NOTEBLOCK(self, i:int=None):
            if i is None:
                return self.getTokens(LilypondParser.END_NOTEBLOCK)
            else:
                return self.getToken(LilypondParser.END_NOTEBLOCK, i)

        def NEXT_NOTEBLOCK_P(self, i:int=None):
            if i is None:
                return self.getTokens(LilypondParser.NEXT_NOTEBLOCK_P)
            else:
                return self.getToken(LilypondParser.NEXT_NOTEBLOCK_P, i)

        def getRuleIndex(self):
            return LilypondParser.RULE_polyphony_block




    def polyphony_block(self):

        localctx = LilypondParser.Polyphony_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_polyphony_block)
        self._la = 0 # Token type
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(LilypondParser.START_POLYPHONY_N)
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 134
                    self.voice_block()
                    self.state = 137 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LilypondParser.VOICE_CTX) | (1 << LilypondParser.VOICE_CTX_N) | (1 << LilypondParser.VOICE_CTX_P))) != 0)):
                        break

                self.state = 139
                self.match(LilypondParser.END_POLYPHONY_P)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(LilypondParser.START_POLYPHONY_N)
                self.state = 142
                self.match(LilypondParser.NEW_NOTEBLOCK_P)
                self.state = 143
                self.note_block()
                self.state = 144
                self.match(LilypondParser.END_NOTEBLOCK)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LilypondParser.NEXT_NOTEBLOCK_P:
                    self.state = 145
                    self.match(LilypondParser.NEXT_NOTEBLOCK_P)
                    self.state = 146
                    self.match(LilypondParser.NEW_NOTEBLOCK_P)
                    self.state = 147
                    self.note_block()
                    self.state = 148
                    self.match(LilypondParser.END_NOTEBLOCK)
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 155
                self.match(LilypondParser.END_POLYPHONY_P)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGLE(self):
            return self.getToken(LilypondParser.LANGLE, 0)
